--- a/fishslaphtml/flexpowerhtml/main.html
+++ b/fishslaphtml/flexpowerhtml/main.html
@@ -91,9 +91,12 @@
 
 <p style="color:white;" class="p2"><sup>* Mario won't be featured due to Cease and desist nukes coming from [[[NINTENDO, CO. LTD, KYOTO, JAPAN]]]</sup> Sonic will be featured instead.</p>
 
+<h1 style="color:white;" class="p2">DOWNLOADS</h1>
+    <p style="color:white;" class="p2">there will be a demo coming soon with an upcoming Steam and Xbox Series X/S release later. (even though the GOG release won't feature multiplayer for several reasons)</p>
 
-var class <source>
-
+    
+    
+    <p style="color:white;" class="p2"><sub>© Fish Slap Entertainment, LLC.</sub></p>
 
 </body>
 </html>
