--- a/fishslaphtml/flexpowerhtml/main.html
+++ b/fishslaphtml/flexpowerhtml/main.html
@@ -51,7 +51,7 @@
 
 <p style="color:white;" class="p2">Flexpower is a game where you shoot bad guys and fly all over the place. think the momentum and speed of 2D Sonic mixed with with the gameplay of Doom and Quake.</p>
 
-<p style="color:white;" class="p2">you're all around zip-lashing* and jumping while you hold a gun and shoot aliens with different guns and rocket jump and some shit</p>
+<p style="color:white;" class="p2">you're all around zip-lashing* and jumping while you hold a gun and shoot other robots with different guns and rocket jump and some shit</p>
 
 <p style="color:white;" class="p2">it will have lots of shit happening and you must have to react quickly to get points and stuff</p>
 
@@ -89,7 +89,7 @@
 <h2 style="color:white;" class="p2">is the protagonist a human or machine?</h2>
 <p style="color:white;" class="p2">machine, because humans are outdated</p>
 
-<p style="color:white;" class="p2"><sup>* Mario won't be featured due to Cease and desist nukes coming from [[[NINTENDO, CO. LTD, KYOTO, JAPAN]]]</sup> Sonic will be featured instead.</p>
+<p style="color:white;" class="p2"><sup>* [[[REDACTED]]] won't be featured due to Cease and desist nukes coming from [[[NINTENDO, CO. LTD, KYOTO, JAPAN]]]</sup> </p>
 
 <h1 style="color:white;" class="p2">DOWNLOADS</h1>
     <p style="color:white;" class="p2">there will be a demo coming soon with an upcoming Steam and Xbox Series X/S release later. (even though the GOG release won't feature multiplayer for several reasons)</p>
