--- a/fishslaphtml/flexpowerhtml/main.html
+++ b/fishslaphtml/flexpowerhtml/main.html
@@ -31,6 +31,7 @@
       </a><br>
 <img src="flexpowerfinallogo.png">
 <h1 style="color:white;" class="p2">A Fast-paced First-person Shooter Filled with Momentum!</h1>
+    <h2 style="color:white;" class="p2">Featuring music by Geometry Dash composer <a href="https://www.waterflame.com">Waterflame</a></h2>
 <p style="color:white;" class="p2"><i>"This game truly has the momentum and difficulty" - IGN</i></p>
 <p style="color:white;" class="p2"><i>"FLEXPOWER makes up for a good challenge and the controls are good" - GameSpot</i></p>
 <p style="color:white;" class="p2"><i>"It's Flexin' time!" - Reddit</i></p>
