--- a/fishslaphtml/fish.html
+++ b/fishslaphtml/fish.html
@@ -1,14 +1,43 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!DOCTYPE html> 
+<html> 
+<body> 
 
-<video width="320" height="240" controls>
-  <source src="spinnyfish.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+<div style="text-align:center"> 
+  <button onclick="playPause()">Play/Pause</button> 
+  <button onclick="makeBig()">Big</button>
+  <button onclick="makeSmall()">Small</button>
+  <button onclick="makeNormal()">Normal</button>
+  <br><br>
+  <video id="video1" width="420">
+    <source src="fish.mp4" type="video/mp4">
+    Your browser does not support HTML video.
+  </video>
+</div> 
 
-<h1>fish.</h1>
+<script> 
+var myVideo = document.getElementById("video1"); 
+
+function playPause() { 
+  if (myVideo.paused) 
+    myVideo.play(); 
+  else 
+    myVideo.pause(); 
+} 
+
+function makeBig() { 
+    myVideo.width = 560; 
+} 
+
+function makeSmall() { 
+    myVideo.width = 320; 
+} 
+
+function makeNormal() { 
+    myVideo.width = 420; 
+} 
+</script> 
+
 <p>fish.</p>
-</body>
-</html>
 
+</body> 
+</html>
