--- a/fishslaphtml/fish.html
+++ b/fishslaphtml/fish.html
@@ -2,42 +2,15 @@
 <html> 
 <body> 
 
-<div style="text-align:center"> 
-  <button onclick="playPause()">Play/Pause</button> 
-  <button onclick="makeBig()">Big</button>
-  <button onclick="makeSmall()">Small</button>
-  <button onclick="makeNormal()">Normal</button>
-  <br><br>
-  <video id="video1" width="420">
-    <source src="fish.mp4" type="video/mp4">
-    Your browser does not support HTML video.
-  </video>
-</div> 
+<video width="400" controls>
+  <source src="fish.mp4" type="video/mp4">
+  Your browser does not support HTML video.
+</video>
 
-<script> 
-var myVideo = document.getElementById("video1"); 
-
-function playPause() { 
-  if (myVideo.paused) 
-    myVideo.play(); 
-  else 
-    myVideo.pause(); 
-} 
-
-function makeBig() { 
-    myVideo.width = 560; 
-} 
-
-function makeSmall() { 
-    myVideo.width = 320; 
-} 
-
-function makeNormal() { 
-    myVideo.width = 420; 
-} 
-</script> 
-
-<p>fish.</p>
+<p>
+fish.
+</p>
 
 </body> 
 </html>
+
