--- a/fishslaphtml/fish.html
+++ b/fishslaphtml/fish.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html> 
-<html> 
-<body> 
+<!DOCTYPE html>
+<html>
+<body>
 
-<video width="400" controls>
-  <source src="fish.mp4" type="video/mp4">
-  Your browser does not support HTML video.
+<video width="320" height="240" controls>
+  <source src="spinnyfish.mp4" type="video/mp4">
+  Your browser does not support the video tag.
 </video>
 
-<p>
-fish.
-</p>
+<p>fish</p>
 
-</body> 
+</body>
 </html>
+
 
