--- a/fishslaphtml/flexpowerhtml/main.html
+++ b/fishslaphtml/flexpowerhtml/main.html
@@ -47,8 +47,7 @@
 <p style="color:white;" class="p3"><sup>rick astley gifs are meant to be placeholders</sup></p>
 
 
-<h1 style="color:white;" class="p1"><i>About this l'oudres game</i></h1>
-<p style="color:white;" class="p1"><i>l'oudres means garbage in french by the way, thanks google translate</i></p>
+<h1 style="color:white;" class="p2">What is Flexpower?</h1>
 
 <p style="color:white;" class="p3">Flexpower is a game where you shoot bad guys and fly all over the place. think the momentum and speed of 2D Sonic mixed with with the gameplay of Doom and Quake.</p>
 
@@ -88,7 +87,7 @@
 <p style="color:white;" class="p3">modern websites are simply bland.</p>
 
 <h2 style="color:white;" class="p3">is the protagonist a human or machine?</h2>
-<p style="color:white;" class="p3">machine, because humans are outdated</p>
+    <p style="color:white;" class="p3">machine, because humans are outdated <sup>[ALSO DON'T MAKE HUMAN ART OF OUR CHARACTERS]</sup></p>
 
 <p style="color:white;" class="p3"><sup>* [[[REDACTED]]] won't be featured due to Cease and desist nukes coming from [[[NINTENDO, CO. LTD, KYOTO, JAPAN]]]</sup> </p>
 
