--- a/fishslaphtml/flexpowerhtml/main.html
+++ b/fishslaphtml/flexpowerhtml/main.html
@@ -47,7 +47,7 @@
 <p style="color:white;" class="p3"><sup>rick astley gifs are meant to be placeholders</sup></p>
 
 
-<h1 style="color:white;" class="p2">What is Flexpower?</h1>
+<h1 style="color:white;" class="p2">WHAT IS FLEXPOWER?</h1>
 
 <p style="color:white;" class="p3">Flexpower is a game where you shoot bad guys and fly all over the place. think the momentum and speed of 2D Sonic mixed with with the gameplay of Doom and Quake.</p>
 
