--- a/fishslaphtml/support/support.html
+++ b/fishslaphtml/support/support.html
@@ -16,7 +16,7 @@
         <h1>Welcome to the Fish Slap Help and Support Center!</h1>
         <h2>Frequently Visited Pages</h2>
         <a href="https://fishslapentertainment.github.io/fishslaphtml/support/faq.html/">[FAQ]</a>
-        <a href="https://fishslapentertainment.github.io/fishslaphtml/support/bugtrackers.html/">[Bug Trackers]</a>
+        <a href="https://fishslapentertainment.github.io/fishslaphtml/support/bugtrackers.html">[Bug Trackers]</a>
         <a href="https://fishslapentertainment.github.io/fishslaphtml/support/faq.html/">[I'm Experiencing a Problem]</a>
         <br><a href="https://fishslapentertainment.github.io/fishslaphtml/support/faq.html/">[My Game Crashed]<a href="https://fishslapentertainment.github.io/fishslaphtml/support/faq.html/">[Where's my save data?]</a>
         <br>
