--- a/fishslaphtml/support/bugtrackers.html
+++ b/fishslaphtml/support/bugtrackers.html
@@ -8,14 +8,14 @@
     </head>
     <body>
         <a href="https://sites.google.com/view/fishslap-entertainment">
-            <img src="/flexpowerhtml/fishslaprthp.png" alt="RETURN TO HOMEPAGE" style="width:100px;height:50px;">
+            <img src="fishslaphtml/flexpowerhtml/fishslaprthp.png" alt="RETURN TO HOMEPAGE" style="width:100px;height:50px;">
           </a>
         <a href="https://fishslapmailbox.blogspot.com">
-            <img src="/flexpowerhtml/FISHSLAPMAILBOX.png" alt="FISH SLAP MAILBOX" style="width:100px;height:50px;">
+            <img src="fishslaphtml/flexpowerhtml/FISHSLAPMAILBOX.png" alt="FISH SLAP MAILBOX" style="width:100px;height:50px;">
           </a><br>
         <h1>BUG TRACKERS</h1>
         <h2>you show us the bug, we fix it.</h2>
-        <img src="https://fishslapentertainment.github.io/fishslaphtml/support/Bug Trackers.png/"
+        <img src="fishslaphtml/support/Bug Trackers.png/"
         
         <a href="https://github.com/FishSlapEntertainment/bugtrackers/issues/new">Report Bugs Here</a>
         <br>
