--- a/fishslaphtml/support/bugtrackers.html
+++ b/fishslaphtml/support/bugtrackers.html
@@ -15,7 +15,7 @@
           </a><br>
         <h1>BUG TRACKERS</h1>
         <h2>you show us the bug, we fix it.</h2>
-        <img src="fishslaphtml/support/Bug Trackers.png/"
+        <img src="Bug Trackers.png/"
         
         <a href="https://github.com/FishSlapEntertainment/bugtrackers/issues/new">Report Bugs Here</a>
         <br>
